platform/tekton-pipelines/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: &host tekton.zanelab.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: tekton-dashboard
                port:
                  name: http
  tls:
    - hosts:
        - *host
      secretName: tekton-tls-certificate
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: listener-ingress
  namespace: tekton-pipelines
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: "homelab-prod.zanelab.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: listener.zanelab.com
spec:
  tls:
  - secretName: tekton-listener-tls-certificate
    hosts:
    - listener.zanelab.com
  rules:
  - host: listener.zanelab.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: el-test-listener
            port:
              number: 8080
  tls:
  - hosts:
      - listener.zanelab.com
    secretName: tekton-listener-tls-certificate
